--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -3,4 +3,5 @@
 @import './common/common.css';
 @import './common/waves.css';
 @import './common/flex.css';
+@import './icon.css';
 @import './components.css';
