--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -2,3 +2,4 @@
 @import '../icon/styles/index.css';
 @import '../button/styles/index.css';
 @import '../button-group/styles/index.css';
+@import '../collapse/styles/index.css';
