--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -4,4 +4,5 @@
 @import './common/waves.css';
 @import './common/flex.css';
 @import './icon.css';
+@import './transition.css';
 @import './components.css';
