--- a/src/_styles/transition.css
+++ b/src/_styles/transition.css
@@ -1,4 +1,3 @@
-//fade-in
 .fade-in-enter-active,
 .fade-in-leave-active {
   transition: opacity var(--bin-animation-duration-base) cubic-bezier(0.55, 0, 0.1, 1);
@@ -7,7 +6,7 @@
 .fade-in-leave-to {
   opacity: 0;
 }
-//  fade-in-linear
+
 .fade-in-linear-enter-active,
 .fade-in-linear-leave-active {
   transition: opacity var(--bin-animation-duration-base) linear;
@@ -16,7 +15,7 @@
 .fade-in-linear-leave-to {
   opacity: 0;
 }
-// move-left
+
 .move-left-enter-active,
 .move-left-leave-active {
   transition:
@@ -29,7 +28,7 @@
   opacity: 0;
   transform: translateX(-100%);
 }
-// move-right
+
 .move-right-enter-active,
 .move-right-leave-active {
   transition:
@@ -41,7 +40,7 @@
   opacity: 0;
   transform: translateX(100%);
 }
-//  中间缩放zoom-in-center
+
 .zoom-in-center-enter-active,
 .zoom-in-center-leave-active {
   transition:
@@ -53,7 +52,7 @@
   opacity: 0;
   transform: scaleX(0);
 }
-//  底部缩放zoom-in-bottom
+
 .zoom-in-bottom-enter-active,
 .zoom-in-bottom-leave-active {
   opacity: 1;
@@ -68,7 +67,7 @@
   opacity: 0;
   transform: scaleY(0);
 }
-//  顶部缩放zoom-in-top
+
 .zoom-in-top-enter-active,
 .zoom-in-top-leave-active {
   opacity: 1;
@@ -86,7 +85,7 @@
   opacity: 0;
   transform: scaleY(0);
 }
-//  左侧缩放zoom-in-left
+
 .zoom-in-enter-active,
 .zoom-in-leave-active {
   opacity: 1;
@@ -102,13 +101,13 @@
   transform: scale(0.45, 0.45);
 }
 
-//  下拉动画
 .collapse-transition {
   transition:
-    var(--bin-animation-duration-base) height ease-in-out,
-    var(--bin-animation-duration-base) padding-top ease-in-out,
-    var(--bin-animation-duration-base) padding-bottom ease-in-out;
+    height var(--bin-animation-duration-base) ease-in-out,
+    padding-top var(--bin-animation-duration-base) ease-in-out,
+    padding-bottom var(--bin-animation-duration-base) ease-in-out;
 }
+
 .horizontal-collapse-transition {
   transition:
     var(--bin-animation-duration-base) width ease-in-out,
@@ -119,7 +118,7 @@
 .opacity-transition {
   transition: opacity var(--bin-animation-duration-base) cubic-bezier(0.55, 0, 0.1, 1);
 }
-// 过渡动画 横向渐变
+
 .fade-transverse-leave-active,
 .fade-transverse-enter-active {
   transition:
@@ -135,7 +134,6 @@
   transform: translateX(30px);
 }
 
-// 过渡动画 缩放渐变
 .fade-scale-leave-active,
 .fade-scale-enter-active {
   transition:
@@ -151,7 +149,6 @@
   transform: scale(0.8);
 }
 
-// 过渡动画 缩放渐变
 .fade-scale-move-leave-active,
 .fade-scale-move-enter-active {
   transition:
