--- a/src/_styles/common/reset.css
+++ b/src/_styles/common/reset.css
@@ -1,6 +1,6 @@
 body {
   color: var(--bin-color-text-primary);
-  font-size: var(--bin-base-font-size);
+  font-size: var(--bin-font-size-default);
   font-family: var(--bin-font-family);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -87,15 +87,15 @@ h6 {
 }
 
 h1 {
-  font-size: calc(--bin-base-font-size + 6px);
+  font-size: calc(--bin-font-size-default + 6px);
 }
 
 h2 {
-  font-size: calc(--bin-base-font-size + 4px);
+  font-size: calc(--bin-font-size-default + 4px);
 }
 
 h3 {
-  font-size: calc(--bin-base-font-size + 2px);
+  font-size: calc(--bin-font-size-default + 2px);
 }
 
 h4,
@@ -117,11 +117,11 @@ p {
 
 sup,
 sub {
-  font-size: calc(--bin-base-font-size - 1px);
+  font-size: calc(--bin-font-size-default - 1px);
 }
 
 small {
-  font-size: calc(--bin-base-font-size - 2px);
+  font-size: calc(--bin-font-size-default - 2px);
 }
 
 hr {
@@ -129,4 +129,16 @@ hr {
   margin-bottom: 20px;
   border: 0;
   border-top: var(--bin-border-base-light);
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  margin: 0;
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
 }
