--- a/src/_internal/empty/styles/index.css
+++ b/src/_internal/empty/styles/index.css
@@ -1,6 +1,6 @@
 .bin-empty {
   margin: 0 8px;
-  font-size: var(--bin-base-font-size);
+  font-size: var(--bin-font-size-default);
   line-height: 22px;
   text-align: center;
   .bin-empty-image {
