--- a/demo/.vitepress/theme/custom.css
+++ b/demo/.vitepress/theme/custom.css
@@ -151,6 +151,16 @@ p {
             }
           }
         }
+        &.is-active {
+          background-color: var(--bin-color-primary-light5);
+          .item {
+            .text {
+              > span {
+                color: var(--bin-color-primary);
+              }
+            }
+          }
+        }
       }
       &.is-active {
         background-color: var(--bin-color-primary-light5);
@@ -172,7 +182,7 @@ p {
         border-top: none;
       }
       .VPSidebarItem {
-        padding: 0 8px;
+        padding: 0 12px;
       }
     }
     .curtain {
