--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -8,6 +8,8 @@
 
 @import '../_internal/empty/styles/index.css';
 @import '../_internal/popper/styles/index.css';
+@import '../_internal/scrollbar/styles/index.css';
+
 @import '../icon/styles/index.css';
 @import '../button/styles/index.css';
 @import '../button-group/styles/index.css';
