--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -15,3 +15,4 @@
 @import '../button-group/styles/index.css';
 @import '../collapse/styles/index.css';
 @import '../tooltip/styles/index.css';
+@import '../layout/styles/index.css';
