--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -22,3 +22,4 @@
 @import '../split/styles/index.css';
 @import '../space/styles/index.css';
 @import '../grid/styles/index.css';
+@import '../dropdown/styles/index.css';
