--- a/src/icon/styles/index.css
+++ b/src/icon/styles/index.css
@@ -1,6 +1,6 @@
 @import './dark.css';
 .bin-icon {
-  --b-icon-text-color: var(--bin-color-text-default);
+  --b-icon-text-color: inherit;
 }
 
 .bin-icon {
