--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -23,3 +23,4 @@
 @import '../space/styles/index.css';
 @import '../grid/styles/index.css';
 @import '../dropdown/styles/index.css';
+@import '../tag/styles/index.css';
