--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -21,3 +21,4 @@
 @import '../dropdown/styles/index.css';
 @import '../tag/styles/index.css';
 @import '../message/styles/index.css';
+@import '../alert/styles/index.css';
