--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -23,3 +23,4 @@
 @import '../message/styles/index.css';
 @import '../alert/styles/index.css';
 @import '../back-top/styles/index.css';
+@import '../badge/styles/index.css';
